✨feat(devise): ajout de devise

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,8 +1,8 @@
 h1 {
-  color: rgb(11, 56, 170);
+  color: #14213d;
   font-family: 'Poppins', sans-serif;
 }
 
 p {
-  color: rgb(51, 105, 221);
+  color: #14213d;
 }
